samples/_failures_safe/1761196146_649119_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23624323.c: In function ‘main’:
./samples/SAFE/__tmp_23624323.c:125:5: error: expected expression at end of input
  125 |     if (len > 0 && input[len-1] == '\n') input[--len] =
      |     ^~
./samples/SAFE/__tmp_23624323.c:125:5: error: expected declaration or statement at end of input
